--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -15,7 +15,7 @@
 
 // colors
   $color-tx:          #363636;
-  $color-tx-muted:    #808080;
+  $color-tx-muted:    #8899a6;
   $color-tx-darkened: $color-tx;
 
   $color-bg:            #FFFFFF;
