--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -1,28 +1,48 @@
 <div class="tweet">
-    <div class="l-block-x-small">
-        <div class="l-split">
-            <div class="l-split__right">
-                <div class="tweet__published" am-time-ago="tweet.published"></div>
+    <div class="l-media l-media--med">
+        <div class="l-media__figure">
+            <div class="tweet__author-avatar"
+                 style="background-image: url({{tweet.author.avatar}});">
+            </div>
+        </div>
+
+        <div class="l-media__body">
+            <div class="l-block-x-small">
+                <div class="l-list-inline l-list-inline--x-small">
+                    <div class="l-list-inline__item is-middle-aligned">
+                        <div class="tweet__author-name">
+                            {{tweet.author.name}}
+                        </div>
+                    </div>
+
+                    <div class="l-list-inline__item is-middle-aligned">
+                        <div class="tweet__author-screen-name">
+                            @{{tweet.author.screenName}}
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="l-split__left">
-                <div class="l-list-inline l-list-inline--x-small">
-                    <div class="l-list-inline__item">
-                        <div class="tweet__author-avatar"
-                             style="background-image: url({{tweet.author.avatar}});"></div>
-                    </div>
+            <div class="l-block-small">
+                <div class="tweet__text">
+                    <div>{{tweet.tweet.text}}</div>
 
-                    <div class="l-list-inline__item">
-                        <div class="tweet__author-name">@{{tweet.author.name}}</div>
-                    </div>
+                    <a href="{{tweet.tweet.url}}" class="tweet__link"
+                                                            target="_blank">
+                        {{tweet.tweet.url | characters:35}}
+                    </a>
+                </div>
+            </div>
+
+            <div class="l-split">
+                <div class="l-split__right">
+                    <button class="tweet__link">see details</button>
+                </div>
+
+                <div class="l-split__left">
+                    <div class="tweet__published" am-time-ago="tweetTime"></div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="l-block-x-small">
-        <div class="tweet__text">{{tweet.text}}</div>
-    </div>
-
-    here be actions...
 </div>
