--- a/app/scripts/templates/activity.html
+++ b/app/scripts/templates/activity.html
@@ -1,9 +1,23 @@
 <div class="app-body">
     <div class="activity-panel">
         <div class="ap-header">
-            <div class="ap-header__title">
-                Tweets about Photoshop
+            <div class="l-block-small">
+                <div class="ap-header__title">
+                    Tweets about Photoshop
+                </div>
             </div>
+
+            <div class="l-block-small">
+                <label>
+                    <input type="checkbox"
+                           ng-model="filters.highlightUnfamiliar"> Only tweets for unfamiliar commands
+                </label>
+            </div>
+
+            <label>
+                <input type="checkbox"
+                       ng-model="filters.highlightRelevant"> Only tweets for relevant commands
+            </label>
         </div>
 
         <div class="ap-section">
