--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -55,10 +55,14 @@
 }
 
 .brush .extent {
-  stroke: $color-dc-tertiary;
-  stroke-opacity: 0.6;
-  stroke-width: 2px;
-  fill: none;
+  stroke: none;
+  fill: white;
+  fill-opacity: 0.4;
+}
+
+.brush__handle {
+  stroke: none;
+  fill: $color-dc-secondary;
   shape-rendering: crispEdges;
 }
 
@@ -88,7 +92,7 @@
     stroke-width: 1px;
     opacity: 1;
   }
-  .timeline-tweet--following {
-    stroke: $color-dc-quaternary;
+  .timeline-tweet--active {
+    stroke: $color-dc-secondary;
     stroke-width: 3px;
   }
