refactored & fixed interaction for the menu

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -120,7 +120,7 @@
         'layouts/hoverchange';
 
 @import 'modules/app-body',
-        'modules/app-menu',
+        'modules/menu',
         'modules/tweet',
         'modules/author',
         'modules/toolbar',
