some progress on toolbar

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -124,8 +124,8 @@
         'modules/tweet',
         'modules/author',
         'modules/toolbar',
-        'modules/toolbar-item',
-        'modules/panelbar-item',
+        'modules/tool',
+        'modules/panel',
         'modules/tweets-popup',
         'modules/activity-panel',
         'modules/active-tweet';
