--- a/app/sass/modules/_panel.scss
+++ b/app/sass/modules/_panel.scss
@@ -1,4 +1,4 @@
-.panelbar-item {
+.panel {
   position: relative;
 
   &__counter {
@@ -40,7 +40,7 @@
   }
 }
 
-.pi-panelname {
+.p-name {
   display: block;
   width: 100%;
 
