--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -6,7 +6,7 @@
          ng-click="clickOpen(item)">
 
         <div class="md-item__counter"
-             ng-show="item.tweets.length > 0">{{item.tweets.length}}</div>
+             ng-show="item.tweetsCount > 0">{{item.tweetsCount}}</div>
 
         <button class="md-item__name">{{item.label}}</button>
     </div>
