--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -5,8 +5,8 @@
       <div class="tool"
            ng-class="{'tool--open': tool.isOpen}">
         <button class="t-primary"
-                ng-click="clickOpen()"
-                ng-mouseenter="hoverOpen()">
+                ng-click="clickOpen(tool)"
+                ng-mouseenter="hoverOpen(tool)">
           <div class="t-primary__icon"
                ng-class="{'t-primary__icon--large': tool.largeIcon}"
                style="background-image: url('/images/{{tool.id}}.png');"></div>
@@ -18,12 +18,13 @@
 
         <div class="tool__dropdown"
              ng-show="tool.isOpen"
-             ng-if="tool.children">
+             ng-if="tool.children.length">
           <div class="t-secondary"
                ng-class="{'t-secondary--first': $first}"
                ng-repeat="subtool in tool.children">
 
-            <button class="ts-button">
+            <button class="ts-button"
+                    ng-mouseover="hoverOpen(subtool)">
               <div class="l-list-inline l-list-inline--x-small">
                 <div class="l-list-inline__item is-middle-aligned">
                   <div class="ts-button__icon"
