--- a/app/scripts/templates/panelbar.html
+++ b/app/scripts/templates/panelbar.html
@@ -1,8 +1,33 @@
 <div class="toolbar toolbar--right">
   <div ng-repeat="panel in panels">
     <div class="toolbar__slot"
+         ng-mouseenter="open(panel)"
+         ng-mouseleave="hide()"
          ng-if="!panel.divider">
-      <panel panel="panel"></panel>
+      <div class="t-item"
+           ng-class="{'t-item--open': panel.isOpen}">
+        <button>
+          <div class="l-list-inline l-list-inline--x-small">
+            <div class="l-list-inline__item is-middle-aligned">
+              <div class="t-item__icon"
+                   style="background-image: url('/images/{{panel.id}}.png');">
+              </div>
+            </div>
+
+            <div class="l-list-inline__item is-middle-aligned">
+              <div class="t-item__label">{{panel.label}}</div>
+            </div>
+          </div>
+        </button>
+
+        <div class="t-item__counter t-item__counter--rev"
+             ng-show="panel.tweetsCount > 0">{{panel.tweetsCount}}</div>
+      </div>
+
+      <div class="t-dropdown t-dropdown--rev"
+           ng-show="panel.isOpen">
+        <img ng-src="/images/{{panel.id}}-panel.png" alt="{{panel.label}}"/>
+      </div>
     </div>
 
     <div class="toolbar__divider"
