tweet & filter services, tweet list directive

--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -1,51 +1,52 @@
 <div class="tweet">
-    <div class="l-media l-media--med">
-        <div class="l-media__figure">
-            <div class="tweet__author-avatar"
-                 style="background-image: url({{tweet.author.avatar}});">
-            </div>
-        </div>
+  <div ng-if="data."></div>
+  <!--<div class="l-media l-media&#45;&#45;med">-->
+  <!--<div class="l-media__figure">-->
+  <!--<div class="tweet__author-avatar"-->
+  <!--style="background-image: url({{tweet.author.avatar}});">-->
+  <!--</div>-->
+  <!--</div>-->
 
-        <div class="l-media__body">
-            <div class="l-block-x-small">
-                <div class="l-list-inline l-list-inline--x-small">
-                    <div class="l-list-inline__item is-middle-aligned">
-                        <div class="tweet__author-name">
-                            {{tweet.author.name}}
-                        </div>
-                    </div>
+  <!--<div class="l-media__body">-->
+  <!--<div class="l-block-x-small">-->
+  <!--<div class="l-list-inline l-list-inline&#45;&#45;x-small">-->
+  <!--<div class="l-list-inline__item is-middle-aligned">-->
+  <!--<div class="tweet__author-name">-->
+  <!--{{tweet.author.name}}-->
+  <!--</div>-->
+  <!--</div>-->
 
-                    <div class="l-list-inline__item is-middle-aligned">
-                        <div class="tweet__author-screen-name">
-                            @{{tweet.author.screenName}}
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <!--<div class="l-list-inline__item is-middle-aligned">-->
+  <!--<div class="tweet__author-screen-name">-->
+  <!--@{{tweet.author.screenName}}-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
 
-            <div class="l-block-small">
-                <div class="tweet__text">
-                    <div>{{tweet.tweet.text}}</div>
+  <!--<div class="l-block-small">-->
+  <!--<div class="tweet__text">-->
+  <!--<div>{{tweet.tweet.text}}</div>-->
 
-                    <a href="{{tweet.tweet.url}}" class="tweet__link"
-                                                            target="_blank">
-                        {{tweet.tweet.url | characters:35}}
-                    </a>
-                </div>
-            </div>
+  <!--<a href="{{tweet.tweet.url}}" class="tweet__link"-->
+  <!--target="_blank">-->
+  <!--{{tweet.tweet.url | characters:35}}-->
+  <!--</a>-->
+  <!--</div>-->
+  <!--</div>-->
 
-            <div class="l-split">
-                <div class="l-split__right">
-                    <button class="tweet__link"
-                            ng-click="activateTweet(tweet)">see details</button>
-                </div>
+  <!--<div class="l-split">-->
+  <!--<div class="l-split__right">-->
+  <!--<button class="tweet__link"-->
+  <!--ng-click="activateTweet(tweet)">see details</button>-->
+  <!--</div>-->
 
-                <div class="l-split__left">
-                    <div class="tweet__published">
-                        {{tweet.published | amDateFormat:'MMMM Do, h:mm a'}}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <!--<div class="l-split__left">-->
+  <!--<div class="tweet__published">-->
+  <!--{{tweet.published | amDateFormat:'MMMM Do, h:mm a'}}-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
+  <!--</div>-->
 </div>
